🚧 add setting panel

--- a/src/assets/common.styl
+++ b/src/assets/common.styl
@@ -1,3 +1,10 @@
 .airy-canvas-common-plugin
   cursor pointer
   transition color 0.3s ease-in-out
+.airy-canvas-common-plugin-setting
+  box-sizing border-box
+  background #fff
+  box-shadow 0 8px 16px 0 rgba(0, 0, 0, 0.12)
+.airy-canvas-setting-title
+  margin 0
+  font-family roboto
